# COS10009-Custom-Program

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake-multi-platform.yml
